# statsig-openfeature-provider-python

./: .gitignore  main.py  pyproject.toml
src/statsig_openfeature_provider_python/: provider.py
tests/: test_provider.py
